# TrajectoryClusteringInARobotSoccerContext

./: .gitignore  README.md
0-Interpreter/: Colors_in_Game.ods
0-Interpreter-C++/: .gitignore  CMakeLists.txt  README.md
0-Interpreter-C++/include/: Reader.h  debug.h  tools.h
0-Interpreter-C++/include/interpreter/: Reader.h
0-Interpreter-C++/src/: Main.cpp  Reader.cpp  tools.cpp
0-Interpreter/csv/: .~lock.20180621130004-CYRUS2018_0-vs-HELIOS2018_1.csv#
0-Interpreter/lib/: field_analyzer.py  field_visualizer.py  world_model.py
0-Interpreter/tools/: rcg2csv_v1.1.py
1-BallPossession/: CSVBallPosseion.py
2-Filtering/: filter.py
3-GenerateInput/: GenerateInput.py
3-GenerateInput/input/: 20180621130004-CYRUS2018_0-vs-HELIOS2018_1.csv
c++/: CMakeLists.txt
c++/include/: Filter.h  Reader.h  debug.h  tools.h
c++/src/: Filter.cpp  Reader.cpp  tools.cpp
legacy/0-Interpreter/csv/.rcg/: 20180621130004-CYRUS2018_0-vs-HELIOS2018_1.csv
legacy/0-Interpreter/scripts/: count_tackle.py
legacy/0-Interpreter/tools/: rcg2csv_v1.2.py
legacy/2-Filtering/: filter.py
legacy/3-GenerateInput/output/: 20180621130004-CYRUS2018_0-vs-HELIOS2018_1.csv
robocupLogInterpreter/: .gitignore  CMakeLists.txt  TODO.txt
robocupLogInterpreter/data/input/: redme.txt
robocupLogInterpreter/include/: Filter.h  Reader.h  constants.h  debug.h  fileFormat.h  tools.h
robocupLogInterpreter/src/: Filter.cpp  Main.cpp  Reader.cpp  debug.cpp  fileFormat.cpp  legacy.cpp  tools.cpp
src/: Filter.cpp  fileFormat.cpp
